@@ -67,11 +67,3 @@ message ProtobufVersionResponse {
 message UpdateRequest {
     string update_folder = 1;
 }
-
-message BackupCreateRequest {
-    string archive_path = 1;
-}
-
-message BackupRestoreRequest {
-    string archive_path = 1;
-}
